--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="Photos.html">Photos</a></li>
+        <li><a href="Photos.html">Nature</a></li>
     </ul>
 </nav>
 <body>
