--- a/Photos.html
+++ b/Photos.html
@@ -1,27 +1,43 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <title>Nanders Photograhpy</title>
-        <link rel="stylesheet" href="style.css">
-       <!--<link rel="icon" type="image/x-icon" href="/images/favicon.ico">-->
-    </head>
-    <header>
-        <h1><b>Nanders Photograhpy</b></h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="Photos.html">Photos</a></li>
+<!DOCTYPE html >
 
-        </ul>
-    </nav>
+<html lang="en" >
+<head>
+    <meta charset="utf-8" />
+    <title>Nanders Photograhpy</title>
+    <link rel="stylesheet" href="style_Nature.css">
+   <!--<link rel="icon" type="image/x-icon" href="/images/favicon.ico">-->
+</head>
+<header>
+    <div class="background-image"></div>
+
+    <div class="banner-container">
+      <div class="top-banner">
+        <div class="banner-left">
+          <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+              <a href="index.html">Home</a>
+              <a href="Photos.html">Nature</a>
+              <a href="#contact">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="banner-center">Nanders Photography</div>
+      </div>
+    </div>
+</header>
+
+
 <body>
-
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
-
-
+   <table style="width:100%">
+    <tr>
+      <td><img src="index_photo1.JPG" width="500" height="333"></td>
+      <td><img src="index_photo2.JPG" width="500" height="333"></td>
+      <td><img src="index_photo3.JPG" width="500" height="333"></td>
+    </tr>
+    <tr>
+        <td>Test</td>
+    </tr>
+  </table>
 </body>
 </html>
