--- a/index.html
+++ b/index.html
@@ -8,27 +8,28 @@
    <!--<link rel="icon" type="image/x-icon" href="/images/favicon.ico">-->
 </head>
 <header>
-    <h1><b>Nanders Photograhpy</b></h1>
+    <div class="background-image"></div>
+
+    <div class="banner-container">
+      <div class="top-banner">
+        <div class="banner-left">
+          <div class="dropdown">
+            <button class="dropbtn">Menu</button>
+            <div class="dropdown-content">
+              <a href="index.html">Home</a>
+              <a href="Photos.html">Nature</a>
+              <a href="#contact">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="banner-center">Nanders Photography</div>
+      </div>
+    </div>
 </header>
-<nav>
-    <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="Photos.html">Photos</a></li>
-        <li><a href="Photos.html">Nature</a></li>
-    </ul>
-</nav>
+
+
 <body>
-    <h1><b>Welcome to Nanders Photograhpy</b></h1>
-   <p>This will show my Photograhpy photos</p>
-   <table style="width:100%">
-    <tr>
-      <td><img src="index_photo1.JPG" width="500" height="333"></td>
-      <td><img src="index_photo2.JPG" width="500" height="333"></td>
-      <td><img src="index_photo3.JPG" width="500" height="333"></td>
-    </tr>
-    <tr>
-        <td>Test</td>
-    </tr>
-  </table>
+   
+    
 </body>
 </html>
